Various fixes for covers on phones

--- a/css/cover.css
+++ b/css/cover.css
@@ -131,6 +131,14 @@ div.loginbox form > span {
 body.cxUSER #CODEXCOVER div.userbox {
     height: 40px;}
 
+#CODEXCOVER div.userbox a.sblogo { display: none;}
+
+@media (max-width: 600px) {
+    #CODEXCOVER div.userbox span.text {display: none;}
+    #CODEXCOVER div.userbox a.sblogo { display: inline; float: left;}
+    #CODEXCOVER div.userbox a.sbooks { display: none;}
+    #CODEXCOVER div.userbox a.codexusername { float: right;}}
+
 #CODEXCOVER.bookcover > #CODEXBOOKCOVER,
 #CODEXCOVER.bookcover > #CODEXBOOKCOVERHOLDER,
 #CODEXCOVER.titlepage > #CODEXTITLEPAGE,
